--- a/ci-operator/config/RedHatQE/interop-testing/RedHatQE-interop-testing-master__fusion-access-operator-ocp4.20-lp-interop.yaml
+++ b/ci-operator/config/RedHatQE/interop-testing/RedHatQE-interop-testing-master__fusion-access-operator-ocp4.20-lp-interop.yaml
@@ -70,6 +70,8 @@ tests:
       FIREWATCH_DEFAULT_JIRA_ASSIGNEE: mbaldess@redhat.com
       FIREWATCH_DEFAULT_JIRA_PROJECT: LPINTEROP
       FIREWATCH_FAIL_WITH_TEST_FAILURES: "true"
+      FUSION_ACCESS_NAMESPACE: ibm-fusion-access
+      FUSION_ACCESS_STORAGE_SCALE_VERSION: v5.2.3.1
       OPERATORS: |
         [
           {
@@ -81,6 +83,12 @@ tests:
           }
         ]
       RE_TRIGGER_ON_FAILURE: "false"
+      STORAGE_SCALE_CLIENT_CPU: "2"
+      STORAGE_SCALE_CLIENT_MEMORY: 4Gi
+      STORAGE_SCALE_CLUSTER_NAME: ibm-spectrum-scale
+      STORAGE_SCALE_NAMESPACE: ibm-spectrum-scale
+      STORAGE_SCALE_STORAGE_CPU: "2"
+      STORAGE_SCALE_STORAGE_MEMORY: 8Gi
       USER_TAGS: |
         scenario fusion-access
     post:
@@ -91,6 +99,7 @@ tests:
     test:
     - chain: cucushift-installer-check-cluster-health
     - ref: install-operators
+    - ref: interop-tests-fusion-access-tests
     workflow: firewatch-ipi-aws
   timeout: 6h0m0s
 zz_generated_metadata:
